# mdlens

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
benches/: parse_bench.rs
docs/: 01_grep_sections_command.md
evals/: README.md
evals/codebase_markdown_v1/: questions.jsonl
evals/combined_markdown_v1/: questions.jsonl
evals/messy_markdown_v1/: questions.jsonl
evals/scicat_markdown_v1/: questions.jsonl
evals/slop_markdown_v1/: questions.jsonl
skills/mdlens/: SKILL.md
src/: cli.rs  errors.rs  gain.rs  init.rs  lib.rs  main.rs  model.rs  pack.rs  parse.rs  render.rs  search.rs  tokens.rs
tests/: cli_pack.rs  cli_read.rs  cli_scout.rs  cli_search.rs  cli_sections.rs  cli_tree.rs
tests/fixtures/: code_blocks.md  duplicate_headings.md  malformed.md  nested.md  no_headings.md  simple.md  tables_lists.md
