[package]
name = "mdlens"
version = "0.1.0"
edition = "2021"
description = "Token-efficient Markdown structure CLI for agents"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
