[package]
name = "mdlens"
version = "0.1.2"
edition = "2021"
description = "Token-efficient Markdown structure CLI for agents"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dreeseaw/mdlens"
repository = "https://github.com/Dreeseaw/mdlens"
documentation = "https://docs.rs/mdlens"
keywords = ["markdown", "cli", "ai", "agents", "documentation"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ignore = "0.4"
regex = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
